--- a/where.html
+++ b/where.html
@@ -27,6 +27,7 @@ body {
     <header>
         <nav class = "navbar">
             <div class="container">
+                <img src="img/logo.png">
                 <a href="index.html" class = "navbar-brand">Кофейня "Элегант"</a>
                     <div class = "navbar-wrap">
 
