--- a/about.html
+++ b/about.html
@@ -33,28 +33,40 @@ body {
 
                         <ul class = "navbar-menu">
 
-                            <li><a href= "#">О нас</a></li>
-                            <li><a href= "menu.html">Меню</a></li>
-                            <li><a href= "#">Кофейни</a></li>
+                            <li><a href= "about.html">О нас</a></li>
+                            <li><a href= "callback.html">Обратная связь</a></li>
+                            <li><a href= "index.html">Главная</a></li>
                         </ul>
-                        <a href="#" class="callback">Обратная связь</a>
+                        <a href="menu.html" class="callback">Меню</a>
                     </div>
             </div>
         </nav>
         
     </header>
     <main>
-
+        <div class="place">
+            <div class="place-in">
+                <img src="img/map.png">
+                <div class="adress">
+                    <h1>Кофейня "Элегант"</h1>
+                    <p>Кофейня "Элегант" – это то место, где вы сможете насладиться великолепным вкусом кофе и не менее прекрасной атмосферой заведения. 
+                        <br>Мы гарантируем вам  уют, вкусный кофе, а также вежливый и элегантный персонал!</br></p>
+                        
+                    <h3>Наши кофейни располагаются по адресам:</h3>
+                    <p>город Воронеж, площадь Ленина, дом 8<br>город Воронеж, улица 20-летия Октября, дом 90</br></p1>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="foot">
             <div class="links">
                 <h4>Ссылки</h4>
                     <ul class = "links-menu">
-                        <li><a href= "#">О нас</a></li>
+                        <li><a href= "about.html">О нас</a></li>
                         <li><a href= "menu.html">Меню</a></li>
-                        <li><a href= "#">Кофейни</a></li>
-                        <li><a href= "#">Обратная связь</a></li>
+                        <li><a href= "index.html">Главная</a></li>
+                        <li><a href= "callback.html">Обратная связь</a></li>
                     </ul>
             </div>
 
