--- a/callback.html
+++ b/callback.html
@@ -33,28 +33,51 @@ body {
 
                         <ul class = "navbar-menu">
 
-                            <li><a href= "#">О нас</a></li>
-                            <li><a href= "menu.html">Меню</a></li>
-                            <li><a href= "#">Кофейни</a></li>
+                            <li><a href= "about.html">О нас</a></li>
+                            <li><a href= "callback.html">Обратная связь</a></li>
+                            <li><a href= "index.html">Главная</a></li>
                         </ul>
-                        <a href="#" class="callback">Обратная связь</a>
+                        <a href="menu.html" class="callback">Меню</a>
                     </div>
             </div>
         </nav>
         
     </header>
     <main>
+        <div class="callback-case">
+            <div class="callback-form">
+                <h1>Оставьте отзыв:</h1>
+                <div class="input-name">
+                    <input type="text" placeholder="Имя" pattern="[A-Za-zА-Яа-яЁё]+$" required>
+                </div>
 
+                <div class="input-mail">
+                    <input type="email" placeholder="Электронная почта">
+                </div>
+
+                <div class="input-adress">
+                    <input type="text" placeholder="Адрес кофейни" pattern="[A-Za-zА-Яа-яЁё]+$" required>
+                </div>
+
+                <div class="input-response">
+                    <textarea placeholder="Ваш отзыв"></textarea>
+                </div>
+
+                <div class="callback-button">
+                    <a href="#">Отправить отзыв</a>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="foot">
             <div class="links">
                 <h4>Ссылки</h4>
                     <ul class = "links-menu">
-                        <li><a href= "#">О нас</a></li>
+                        <li><a href= "about.html">О нас</a></li>
                         <li><a href= "menu.html">Меню</a></li>
-                        <li><a href= "#">Кофейни</a></li>
-                        <li><a href= "#">Обратная связь</a></li>
+                        <li><a href= "index.html">Главная</a></li>
+                        <li><a href= "callback.html">Обратная связь</a></li>
                     </ul>
             </div>
 
