--- a/ristretto.html
+++ b/ristretto.html
@@ -33,11 +33,11 @@ body {
 
                         <ul class = "navbar-menu">
 
-                            <li><a href= "#">О нас</a></li>
-                            <li><a href= "menu.html">Меню</a></li>
-                            <li><a href= "#">Кофейни</a></li>
+                            <li><a href= "about.html">О нас</a></li>
+                            <li><a href= "callback.html">Обратная связь</a></li>
+                            <li><a href= "index.html">Главная</a></li>
                         </ul>
-                        <a href="#" class="callback">Обратная связь</a>
+                        <a href="menu.html" class="callback">Меню</a>
                     </div>
             </div>
         </nav>
@@ -56,10 +56,10 @@ body {
             <div class="links">
                 <h4>Ссылки</h4>
                     <ul class = "links-menu">
-                        <li><a href= "#">О нас</a></li>
+                        <li><a href= "about.html">О нас</a></li>
                         <li><a href= "menu.html">Меню</a></li>
-                        <li><a href= "#">Кофейни</a></li>
-                        <li><a href= "#">Обратная связь</a></li>
+                        <li><a href= "index.html">Главная</a></li>
+                        <li><a href= "callback.html">Обратная связь</a></li>
                     </ul>
             </div>
 
